--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
   </head>
 
-  <body>
+  <body id="home">
     <!-- Navbar -->
     <nav class="white" role="navigation">
       <div class="nav-wrapper container">
@@ -54,7 +54,7 @@
     <!-- END Paralllax awal -->
 
     <!-- sect awal about-->
-    <div class="container">
+    <div class="container" id="about">
       <div class="section">
         <!--   Icon Section   -->
         <div class="row">
@@ -109,7 +109,7 @@
       </div>
     </div>
 
-    <div class="parallax-container valign-wrapper">
+    <!-- <div class="parallax-container valign-wrapper">
       <div class="section no-pad-bot">
         <div class="container">
           <div class="row center">
@@ -118,37 +118,40 @@
         </div>
       </div>
       <div class="parallax"><img src="background3.jpg" alt="Unsplashed background img 3" /></div>
-    </div>
+    </div> -->
 
     <footer class="page-footer teal">
       <div class="container">
         <div class="row">
           <div class="col l6 s12">
-            <h5 class="white-text">Company Bio</h5>
-            <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+            <h5 class="white-text">Contact Me</h5>
+            <p class="grey-text text-lighten-4">hrian4182@gmail.com</p>
+            <p class="grey-text text-lighten-4">Kota Batam, Kepulauan Riau</p>
           </div>
           <div class="col l3 s12">
-            <h5 class="white-text">Settings</h5>
+            <h5 class="white-text">JDM Cars</h5>
             <ul>
-              <li><a class="white-text" href="#!">Link 1</a></li>
-              <li><a class="white-text" href="#!">Link 2</a></li>
-              <li><a class="white-text" href="#!">Link 3</a></li>
-              <li><a class="white-text" href="#!">Link 4</a></li>
+              <li><a class="white-text" href="#body">Home</a></li>
+              <li><a class="white-text" href="#about">About</a></li>
+              <li><a class="white-text" href="#!">Cars</a></li>
+              <li><a class="white-text" href="#!">Our Partners</a></li>
             </ul>
           </div>
           <div class="col l3 s12">
-            <h5 class="white-text">Connect</h5>
+            <h5 class="white-text">Link</h5>
             <ul>
-              <li><a class="white-text" href="#!">Link 1</a></li>
-              <li><a class="white-text" href="#!">Link 2</a></li>
-              <li><a class="white-text" href="#!">Link 3</a></li>
-              <li><a class="white-text" href="#!">Link 4</a></li>
+              <li><a class="white-text" href="https://hidayatrian.github.io/">Website</a></li>
+              <li><a class="white-text" href="https://www.linkedin.com/in/rian-hidayat-1bb60a185/">Linkedin</a></li>
+              <li><a class="white-text" href="https://www.instagram.com/riyanruhiyan_/?hl=id">Instagram</a></li>
+              <li><a class="white-text" href="https://www.facebook.com/midoriyan.midoriyan/">Facebook</a></li>
             </ul>
           </div>
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container">Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a></div>
+        <div class="container">
+          Created by <a class="brown-text text-lighten-3" href="https://www.instagram.com/riyanruhiyan_/?hl=id">Rian Hidayat</a> with <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize CSS</a>
+        </div>
       </div>
     </footer>
 
